--- a/themes/phoenix/templates/RecordDriver/DefaultRecord/core.phtml
+++ b/themes/phoenix/templates/RecordDriver/DefaultRecord/core.phtml
@@ -24,7 +24,7 @@
       $formatter = $this->recordDataFormatter();
       /* Allowed fields from core. These are core functions/fields
          that we want to add to our custom output from MarcFields*/
-      $allowed = ['Related Items'];
+      $allowed = ['New Title'];
       $defaultCoreFields = $formatter->getDefaults('core');
       foreach (array_keys($defaultCoreFields) as $field) {
           if (!in_array($field, $allowed)) {
@@ -36,11 +36,11 @@
     <table class="table table-striped">
       <caption><?=$this->transEsc('Bibliographic Details')?></caption>
       <?php $this->MarcFields()->returnMarcData('top', $siteUrl); ?>
-        <?php foreach ($coreFields as $key => $value): ?>
-          <?php if (is_string($value)): ?>
-              <tr><th><?=$this->transEsc($key)?>:</th><td><?=$value?></td></tr>
-          <?php endif; ?>
-        <?php endforeach; ?>
+        <?php if (!empty($coreFields)): ?>
+          <?php foreach ($coreFields as $current): ?>
+            <tr><th><?=$this->transEsc($current['label'])?></th><td><?=$current['value']?></td></tr>
+          <?php endforeach; ?>
+        <?php endif; ?>
     </table>
     <?/* End Main Details */?>
 
