--- a/themes/phoenix/templates/myresearch/profile.phtml
+++ b/themes/phoenix/templates/myresearch/profile.phtml
@@ -9,7 +9,7 @@
     $arrTemplate = '<tr><th>%%LABEL%%:</th><td> %%VALUE%%</td></tr>';
 ?>
 <div class="row">
-  <div class="<?=$this->layoutClass('mainbody')?>">
+  <div class="<?=$this->layoutClass('mainbody')?> col-sm-9">
     <h2><?=$this->transEsc('Your Profile')?></h2>
     <?=$this->flashmessages();?>
 
@@ -59,13 +59,13 @@
           ]
         )?>
     </table>
-  <?php if ('ils-none' !== $this->ils()->getOfflineMode() && !empty($this->patronLoginView->getTemplate())): ?>
+  <?php if ('ils-none' !== $this->ils()->getOfflineMode() && isset($this->patronLoginView) && !empty($this->patronLoginView->getTemplate())): ?>
     <?=$this->partial($this->patronLoginView);?>
   <?php endif; ?>
     <p><a href="https://www.lib.uchicago.edu/borrow/access-privileges/library-cards-and-account-information/" target="_blank" class="external">Keeping contact information current</a></p>
   </div>
 
-<div class="<?=$this->layoutClass('sidebar')?>">
+<div class="<?=$this->layoutClass('sidebar')?> col-sm-3">
   <?=$this->context($this)->renderInContext("myresearch/menu.phtml", ['active' => 'profile'])?>
 </div>
 </div>
