--- a/themes/phoenix/templates/RecordDriver/DefaultRecord/core.phtml
+++ b/themes/phoenix/templates/RecordDriver/DefaultRecord/core.phtml
@@ -24,7 +24,7 @@
       $formatter = $this->recordDataFormatter();
       /* Allowed fields from core. These are core functions/fields
          that we want to add to our custom output from MarcFields*/
-      $allowed = ['New Title'];
+      $allowed = ['Related Items'];
       $defaultCoreFields = $formatter->getDefaults('core');
       foreach (array_keys($defaultCoreFields) as $field) {
           if (!in_array($field, $allowed)) {
