--- a/themes/phoenix/less/item-record.less
+++ b/themes/phoenix/less/item-record.less
@@ -400,7 +400,7 @@ table.holdins-unit tr.section div {
       width: 100%;
   }
 
-  table {
+  table:not(.alphabrowse) {
     tr, th, td {
       display: block;
       padding: 0;
