--- a/themes/phoenix/templates/record/hold.phtml
+++ b/themes/phoenix/templates/record/hold.phtml
@@ -8,10 +8,18 @@
         . '<li class="active">' . $this->transEsc('request_place_text') . '</li>';
 
     $isHold = $this->gatheredDetails['holdtype'] == 'hold';
+    $isPage = $this->gatheredDetails['holdtype'] == 'page';
+    $isDllStorage = isset($_GET['isDllStorage']);
 ?>
 <h2>
   <?php if ($isHold):?>
     <?=$this->transEsc('hold_place_text')?>
+  <?php elseif ($isPage):?>
+      <?php if($isDllStorage):?>
+        <?=$this->transEsc('dll_page_place_text')?>
+      <?php else:?>
+        <?=$this->transEsc('page_place_text')?>
+      <?endif;?>
   <?php else: ?>
     <?=$this->transEsc('request_place_text')?>
   <?php endif; ?>
@@ -31,6 +39,30 @@
       <li>Multiple requests for the same item are fulfilled in the order in which they are received.</li>
       <li>You will receive an email notice when the item is available for pickup.</li>
     </ul>
+  <?php elseif ($isPage):?>
+    <?php if($isDllStorage):?>
+      <ul>
+        <li>Requested items will be available for pickup at the D'Angelo Law Library circulation desk <strong>by 5 p.m. the following business day</strong>.</li>
+        <li>Items requested for pickup at other libraries are typically available <strong>after two business days.</strong></li>
+        <li> Building Use Only items may only be picked up at the D'Angelo Law Library.</li>
+        <li>If a requested item is missing or otherwise unavailable, you will be notified by library staff.</li>
+        <li>If you would like immediate assistance, please contact the D’Angelo Law Library circulation desk at (773) 702-0213 during our regular business <a href="https://www.lib.uchicago.edu/libraries/libraries-hours/">hours</a>.</li>
+      </ul>
+      <p>See <a href="https://www.lib.uchicago.edu/law/collections/storage/">D'Angelo Law Library Storage Collections</a> for more information.</p>
+    <?php else:?>
+      <p>If you can't find an item on the shelf, you can request that Library staff search for it.</p>
+      <ul>
+        <li>Most searches are resolved within two business days.</li>
+        <li>If found, the item will be made available for pick up and you will be notified by email.
+          <ul>
+            <li>Items requested for pickup at their home location will be available as soon as they are located.</li>
+            <li>Items requested for pickup at another location will be available within one business day after they are located.  </li>
+          </ul>
+        </li>
+        <li>If not found, staff will notify you that it has been declared missing.</li>
+        <li>If you would like immediate assistance, ask at any reference or circulation desk.</li>
+      </ul>
+    <?php endif; ?>
   <?php else: ?>
     <ul>
       <li>Recalling a <strong>loaned</strong> item from another user will cause the item to be due <strong>7 days after the date it is recalled</strong>.</li>
