--- a/themes/phoenix/templates/RecordTab/holdingsils.phtml
+++ b/themes/phoenix/templates/RecordTab/holdingsils.phtml
@@ -391,6 +391,10 @@
                  <?php else: ?>
                    <?php $c = $callNos['sort'][$numKey]; ?>
                  <?php endif; ?>
+                 <?php // hAcK, handle bad data ?>
+                 <?php if (isset($c)): ?>
+                   <?php $c = explode(' ', $c)[0]; ?>
+                 <?php endif; ?>
                  <a href="/vufind/alphabrowse/home?from=<?=$c;?>&source=lcc&consult=true">consult the series record</a>.
               <?php else: ?>
               <?php $statusClass = in_array(strtolower($row['status']), $OFFSITE) ? 'text-unknown' : 'text-danger' ?>
