Added an item_collection search for the Video Game Collection in Crear to the advanced search page. Part of what is needed to resolve issue #76.

--- a/themes/phoenix/templates/search/advanced/solr.phtml
+++ b/themes/phoenix/templates/search/advanced/solr.phtml
@@ -536,6 +536,7 @@ $collections = [
 	['data-main-location' => 'scrc', 'value' => 'item_collection:"Codex Manuscripts"', 'text' => 'Codex Manuscripts'],
 	['data-main-location' => 'crerar scrc', 'value' => 'item_collection:"Crerar Manuscripts"', 'text' => 'Crerar Manuscripts'],
 	['data-main-location' => 'crerar scrc', 'value' => 'item_collection:"Crerar Rare Books"', 'text' => 'Crerar Rare Books'],
+	['data-main-location' => 'crerar', 'value' => 'item_collection:"Video Game Collection"', 'text' => 'Video Game Collection'],
 	['data-main-location' => 'reg', 'value' => 'item_collection:"Curriculum Materials Collection"', 'text' => 'Curriculum Materials Collection'],
 	['data-main-location' => 'scrc', 'value' => 'item_collection:"Drama Collection"', 'text' => 'Drama Collection'],
 	['data-main-location' => 'scrc', 'value' => 'item_collection:"EB Children&rsquo;s Literature"', 'text' => 'EB Children&rsquo;s Literature'],
