Switched advanced search faceting of locations and collections to ORs. Fixes issue #81.

--- a/themes/phoenix/templates/search/advanced/solr.phtml
+++ b/themes/phoenix/templates/search/advanced/solr.phtml
@@ -507,48 +507,48 @@ $formats = [
 
 $locations = [
 	['class' => 'all_locations cat', 'value' => '', 'text' => 'All Locations'],
-	['data-name' => 'crerar-main', 'class' => 'cat', 'value' => 'building:"Crerar Library"', 'text' => 'Crerar Library'],
-	['value' => 'building:"Crerar Reference"', 'text' => 'Crerar Reference'],
-	['value' => 'building:"Crerar Reserves"', 'text' => 'Crerar Reserves'],
-	['class' => 'cat', 'value' => 'building:"D&#39;Angelo Law Library"', 'text' => 'D&#39;Angelo Law Library'],
-	['value' => 'building:"Law Reserves"', 'text' => 'Law Reserves'],
-	['class' => 'cat', 'value' => 'building:"Eckhart Library"', 'text' => 'Eckhart Library'],
-	['value' => 'building:"Eckhart Reference"', 'text' => 'Eckhart Reference'],
-	['value' => 'building:"Eckhart Reserves"', 'text' => 'Eckhart Reserves'],
-	['class' => 'cat', 'value' => 'building:"Regenstein Library"', 'text' => 'Regenstein Library'],
-	['value' => 'building:"Regenstein Reference"', 'text' => 'Regenstein Reference'],
-	['value' => 'building:"Regenstein Reserves"', 'text' => 'Regenstein Reserves'],
-	['value' => 'building:"Regenstein TECHB@R"', 'text' => 'Regenstein TECHB@R'],
-	['class' => 'cat', 'value' => 'building:"Special Collections Research Center"', 'text' => 'Special Collections Research Center'],
-	['class' => 'cat', 'value' => 'building:"SSA"', 'text' => 'SSA'],
-	['value' => 'building:"SSA Reserves"', 'text' => 'SSA Reserves'],
+	['data-name' => 'crerar-main', 'class' => 'cat', 'value' => '~building:"Crerar Library"', 'text' => 'Crerar Library'],
+	['value' => '~building:"Crerar Reference"', 'text' => 'Crerar Reference'],
+	['value' => '~building:"Crerar Reserves"', 'text' => 'Crerar Reserves'],
+	['class' => 'cat', 'value' => '~building:"D&#39;Angelo Law Library"', 'text' => 'D&#39;Angelo Law Library'],
+	['value' => '~building:"Law Reserves"', 'text' => 'Law Reserves'],
+	['class' => 'cat', 'value' => '~building:"Eckhart Library"', 'text' => 'Eckhart Library'],
+	['value' => '~building:"Eckhart Reference"', 'text' => 'Eckhart Reference'],
+	['value' => '~building:"Eckhart Reserves"', 'text' => 'Eckhart Reserves'],
+	['class' => 'cat', 'value' => '~building:"Regenstein Library"', 'text' => 'Regenstein Library'],
+	['value' => '~building:"Regenstein Reference"', 'text' => 'Regenstein Reference'],
+	['value' => '~building:"Regenstein Reserves"', 'text' => 'Regenstein Reserves'],
+	['value' => '~building:"Regenstein TECHB@R"', 'text' => 'Regenstein TECHB@R'],
+	['class' => 'cat', 'value' => '~building:"Special Collections Research Center"', 'text' => 'Special Collections Research Center'],
+	['class' => 'cat', 'value' => '~building:"SSA"', 'text' => 'SSA'],
+	['value' => '~building:"SSA Reserves"', 'text' => 'SSA Reserves'],
 ];
 
 $collections = [
 	['class' => 'all_collections', 'value' => '', 'text' => 'All Collections'],
 	['class' => 'ns', 'disabled' => 'disabled', 'value' => '', 'text' => 'No sub-collection'],
- 	['data-main-location' => 'scrc', 'value' => 'item_collection:"American Drama"', 'text' => 'American Drama'],
-	['data-main-location' => 'scrc', 'value' => 'item_collection:"American Newspapers"', 'text' => 'American Newspapers'],
-	['data-main-location' => 'scrc', 'value' => 'item_collection:"Archives/Manuscripts"', 'text' => 'Archives/Manuscripts'],
-	['data-main-location' => 'scrc', 'value' => 'item_collection:"Archives of Czechs and Slovaks Abroad"', 'text' => 'Archives of Czechs and Slovaks Abroad'],
-	['data-main-location' => 'scrc', 'value' => 'item_collection:"Atkinson Collection of American Drama"', 'text' => 'Atkinson Collection of American Drama'],
-	['data-main-location' => 'scrc', 'value' => 'item_collection:"Austrian Collection of Drama"', 'text' => 'Austrian Collection of Drama'],
-	['data-main-location' => 'scrc', 'value' => 'item_collection:"Codex Manuscripts"', 'text' => 'Codex Manuscripts'],
-	['data-main-location' => 'crerar scrc', 'value' => 'item_collection:"Crerar Manuscripts"', 'text' => 'Crerar Manuscripts'],
-	['data-main-location' => 'crerar scrc', 'value' => 'item_collection:"Crerar Rare Books"', 'text' => 'Crerar Rare Books'],
-	['data-main-location' => 'crerar', 'value' => 'item_collection:"Video Game Collection"', 'text' => 'Video Game Collection'],
-	['data-main-location' => 'reg', 'value' => 'item_collection:"Curriculum Materials Collection"', 'text' => 'Curriculum Materials Collection'],
-	['data-main-location' => 'scrc', 'value' => 'item_collection:"Drama Collection"', 'text' => 'Drama Collection'],
-	['data-main-location' => 'scrc', 'value' => 'item_collection:"EB Children&rsquo;s Literature"', 'text' => 'EB Children&rsquo;s Literature'],
-	['data-main-location' => 'scrc', 'value' => 'item_collection:"Helen and Ruth Regenstein Collection of Rare Books"', 'text' => 'Helen and Ruth Regenstein Collection of Rare Books'],
-	['data-main-location' => 'scrc', 'value' => 'item_collection:"Historical Children&rsquo;s Books"', 'text' => 'Historical Children&rsquo;s Books'],
-	['data-main-location' => 'scrc', 'value' => 'item_collection:"Incunabula"', 'text' => 'Incunabula'],
-	['data-main-location' => 'scrc', 'value' => 'item_collection:"Lincke Collection of Popular German Literature"', 'text' => 'Lincke Collection of Popular German Literature'],
-	['data-main-location' => 'scrc', 'value' => 'item_collection:"Lincoln Collection"', 'text' => 'Lincoln Collection'],
-	['data-main-location' => 'scrc', 'value' => 'item_collection:"Ludwig Rosenberger Library of Judaica"', 'text' => 'Ludwig Rosenberger Library of Judaica'],
-	['data-main-location' => 'scrc', 'value' => 'item_collection:"Modern Poetry Rare"', 'text' => 'Modern Poetry Rare'],
-	['data-main-location' => 'scrc', 'value' => 'item_collection:"Rare Books"', 'text' => 'Rare Books'],
-	['data-main-location' => 'scrc', 'value' => 'item_collection:"University of Chicago Press Imprint Collection"', 'text' => 'University of Chicago Press Imprint Collection'],
+ 	['data-main-location' => 'scrc', 'value' => '~item_collection:"American Drama"', 'text' => 'American Drama'],
+	['data-main-location' => 'scrc', 'value' => '~item_collection:"American Newspapers"', 'text' => 'American Newspapers'],
+	['data-main-location' => 'scrc', 'value' => '~item_collection:"Archives/Manuscripts"', 'text' => 'Archives/Manuscripts'],
+	['data-main-location' => 'scrc', 'value' => '~item_collection:"Archives of Czechs and Slovaks Abroad"', 'text' => 'Archives of Czechs and Slovaks Abroad'],
+	['data-main-location' => 'scrc', 'value' => '~item_collection:"Atkinson Collection of American Drama"', 'text' => 'Atkinson Collection of American Drama'],
+	['data-main-location' => 'scrc', 'value' => '~item_collection:"Austrian Collection of Drama"', 'text' => 'Austrian Collection of Drama'],
+	['data-main-location' => 'scrc', 'value' => '~item_collection:"Codex Manuscripts"', 'text' => 'Codex Manuscripts'],
+	['data-main-location' => 'crerar scrc', 'value' => '~item_collection:"Crerar Manuscripts"', 'text' => 'Crerar Manuscripts'],
+	['data-main-location' => 'crerar scrc', 'value' => '~item_collection:"Crerar Rare Books"', 'text' => 'Crerar Rare Books'],
+	['data-main-location' => 'crerar', 'value' => '~item_collection:"Video Game Collection"', 'text' => 'Video Game Collection'],
+	['data-main-location' => 'reg', 'value' => '~item_collection:"Curriculum Materials Collection"', 'text' => 'Curriculum Materials Collection'],
+	['data-main-location' => 'scrc', 'value' => '~item_collection:"Drama Collection"', 'text' => 'Drama Collection'],
+	['data-main-location' => 'scrc', 'value' => '~item_collection:"EB Children&rsquo;s Literature"', 'text' => 'EB Children&rsquo;s Literature'],
+	['data-main-location' => 'scrc', 'value' => '~item_collection:"Helen and Ruth Regenstein Collection of Rare Books"', 'text' => 'Helen and Ruth Regenstein Collection of Rare Books'],
+	['data-main-location' => 'scrc', 'value' => '~item_collection:"Historical Children&rsquo;s Books"', 'text' => 'Historical Children&rsquo;s Books'],
+	['data-main-location' => 'scrc', 'value' => '~item_collection:"Incunabula"', 'text' => 'Incunabula'],
+	['data-main-location' => 'scrc', 'value' => '~item_collection:"Lincke Collection of Popular German Literature"', 'text' => 'Lincke Collection of Popular German Literature'],
+	['data-main-location' => 'scrc', 'value' => '~item_collection:"Lincoln Collection"', 'text' => 'Lincoln Collection'],
+	['data-main-location' => 'scrc', 'value' => '~item_collection:"Ludwig Rosenberger Library of Judaica"', 'text' => 'Ludwig Rosenberger Library of Judaica'],
+	['data-main-location' => 'scrc', 'value' => '~item_collection:"Modern Poetry Rare"', 'text' => 'Modern Poetry Rare'],
+	['data-main-location' => 'scrc', 'value' => '~item_collection:"Rare Books"', 'text' => 'Rare Books'],
+	['data-main-location' => 'scrc', 'value' => '~item_collection:"University of Chicago Press Imprint Collection"', 'text' => 'University of Chicago Press Imprint Collection'],
 ];
 ?>
 
